--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mammoth": "^1.10.0",
