--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "facebook-chatbot-rag",
+  "name": "facebook-chatbot-gemini",
   "version": "2.0.0",
-  "description": "Enhanced Facebook Messenger Chatbot with RAG (Retrieval-Augmented Generation) system for Vietnamese public service support",
+  "description": "Facebook Messenger Chatbot with Google Gemini integration for Vietnamese public service support",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "node test-rag.js",
-    "setup-db": "node setup-database.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "facebook",
     "messenger",
     "chatbot",
     "ai",
-    "rag",
     "gemini",
     "vietnamese",
     "public-service"
   ],
-  "author": "Public Service Assistant Team",
+  "author": "Anh Tuan",
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "axios": "^1.12.2",
-    "cheerio": "^1.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mammoth": "^1.10.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.12.0"
   },
@@ -39,10 +33,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/anhtuan159801/facebook-chatbot-rag.git"
+    "url": "https://github.com/anhtuan159801/facebook-chatbot.git"
   },
   "bugs": {
-    "url": "https://github.com/anhtuan159801/facebook-chatbot-rag/issues"
+    "url": "https://github.com/anhtuan159801/facebook-chatbot/issues"
   },
-  "homepage": "https://github.com/anhtuan159801/facebook-chatbot-rag#readme"
+  "homepage": "https://github.com/anhtuan159801/facebook-chatbot#readme"
 }
